--- a/views/fun.html
+++ b/views/fun.html
@@ -59,7 +59,7 @@
            e.set("libraries",[...r]+"");
            for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
 
-               ({key: "AIzaSyBwxKTsFsxQ52TPLNaw8aDloWx_HMAIH9o", v: "weekly"});</script>
+               ({key: "", v: "weekly"});</script>
         </div>
         <div id="item4">
             <img class="funIMG" src = "https://imgs.search.brave.com/aQovfVSX3Eva_T2aDK1t9b6jAOYvc2friUnjJqtdd_0/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9tcmJv/c3NjYXQuY29tL3dw/LWNvbnRlbnQvdXBs/b2Fkcy8yMDIwLzAz/L0NhdC1sb2FmLTEu/anBn" alt="fun image">
